# Early-Careers-Project

./: .gitignore  README.md  package-lock.json
backend/: .env.example  build_chromadb.py  main.py  pyproject.toml  requirements.txt  test_chromadb.py
backend/data/flood_risk/: flood_risk_london.json  flood_risk_manchester.json  floods_transformed.json
backend/data/rejuvenation/: site_001.txt  site_002.txt
backend/data/urban_spaces/: urban_spaces_london.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  globals.css  index.css  index.jsx  layout.jsx
frontend/src/components/: Banner.jsx
