[project]
name = "early-careers-project"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "fastapi>=0.122.0,<0.123.0",
    "pydantic>=2.12.5,<3.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-core>=1.1.0,<2.0.0",
    "chromadb (>=1.3.5,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"